// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FactCharts actions should close modal 1`] = `
Object {
  "payload": Object {
    "id": 1,
  },
  "type": "FACT_CHART_MODAL_CLOSE",
}
`;

exports[`FactCharts actions should open modal 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "key": "FACT_CHART_1",
        "url": "some/url",
      },
      "type": "API_GET",
    },
  ],
  Array [
    Object {
      "payload": Object {
        "id": 1,
        "title": "some_title",
      },
      "type": "FACT_CHART_MODAL_OPEN",
    },
  ],
]
`;
